Initial content & layout

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,5 +10,22 @@
   <title>Ironhack cart</title>
 </head>
 <body>
+  <h1>Ironhack Merchandising Shop</h1>
+
+  <form action="index.html">
+    <div class="flex-container">
+      <div><span id="product">IronBubble-head</span></div>
+      <div><span id="price">$25.00</span></div>
+      <div>
+        <label for="quantity">QTY</label>
+        <input type="text" id="quantity" value="0"/>
+      </div>
+      <div><span id="total">$0.00</span></div>
+      <div><button class="btn btn-delete" type="button">Delete</button></div>
+    </div>
+    <div class="flex-container">
+      <button class="btn btn-success" type="button">Calculate Prices</button>
+    </div>
+  </form>
 </body>
 </html>
