Calculate total price for one product

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Ironhack Merchandising Shop</h1>
 
-  <form action="index.html">
+  <form>
     <div class="flex-container">
       <div><span id="product">IronBubble-head</span></div>
       <div><span id="price">$25.00</span></div>
@@ -24,7 +24,7 @@
       <div><button class="btn btn-delete" type="button">Delete</button></div>
     </div>
     <div class="flex-container">
-      <button class="btn btn-success" type="button">Calculate Prices</button>
+      <button class="btn btn-success" id="calc-prices-button" type="button">Calculate Prices</button>
     </div>
   </form>
 </body>
