--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,6 +24,16 @@
       <div><button class="btn btn-delete" type="button">Delete</button></div>
     </div>
     <div class="flex-container">
+      <div><span id="product">IronShirt</span></div>
+      <div><span id="price">$15.00</span></div>
+      <div>
+        <label for="quantity">QTY</label>
+        <input type="text" id="quantity" value="0"/>
+      </div>
+      <div><span id="total">$0.00</span></div>
+      <div><button class="btn btn-delete" type="button">Delete</button></div>
+    </div>
+    <div class="flex-container">
       <button class="btn btn-success" id="calc-prices-button" type="button">Calculate Prices</button>
     </div>
   </form>
