--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,23 +14,23 @@
 
   <form>
     <div class="flex-container">
-      <div><span id="product">IronBubble-head</span></div>
-      <div><span id="price">$25.00</span></div>
+      <div><span class="product">IronBubble-head</span></div>
+      <div><span class="price">$25.00</span></div>
       <div>
         <label for="quantity">QTY</label>
-        <input type="text" id="quantity" value="0"/>
+        <input type="text" class="quantity" id="quantity" value="0"/>
       </div>
-      <div><span id="total">$0.00</span></div>
+      <div><span class="total">$0.00</span></div>
       <div><button class="btn btn-delete" type="button">Delete</button></div>
     </div>
     <div class="flex-container">
-      <div><span id="product">IronShirt</span></div>
-      <div><span id="price">$15.00</span></div>
+      <div><span class="product">IronShirt</span></div>
+      <div><span class="price">$15.00</span></div>
       <div>
         <label for="quantity">QTY</label>
-        <input type="text" id="quantity" value="0"/>
+        <input type="text" class="quantity" id="quantity" value="0"/>
       </div>
-      <div><span id="total">$0.00</span></div>
+      <div><span class="total">$0.00</span></div>
       <div><button class="btn btn-delete" type="button">Delete</button></div>
     </div>
     <div class="flex-container">
