--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -37,5 +37,9 @@
       <button class="btn btn-success" id="calc-prices-button" type="button">Calculate Prices</button>
     </div>
   </form>
+
+  <div>
+    <h2>Total Price: <span id="total">$0</span></h2>
+  </div>
 </body>
 </html>
